feat: add event gist for fine-grained retrieval (#102)
* feat: add event fill param

* feat: add event gist

* docs: update locomo

* docs: add search gists

* feat: add search gist memory

* feat: update search gist sdk

* feat: fix db warning and update tests
